--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YesWeHack</title>
+    <title>Index</title>
 </head>
 <body>
-    <t1>YesWeHack</t1>
+    <header>
+        <div class="logo">🎮</div>
+        <nav>
+            <a href="#">Accueil</a>
+            <a href="#">À propos</a>
+            <a href="#">Contact</a>
+            <a href="#">Connexion</a>
+            <a href="#">Inscription</a>
+        </nav>
+    </header>
 </body>
 </html>
