--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <div class="logo">🎮</div>
+        <div class="bouton"></div>
         <nav>
             <a href="#">Accueil</a>
-            <a href="#">À propos</a>
-            <a href="#">Contact</a>
-            <a href="#">Connexion</a>
-            <a href="#">Inscription</a>
+            <a href="#">Économie</a>
+            <a href="#">Éthique </a>
+            <a href="#">Histoire</a>
+            <a href="#">Économie</a>
         </nav>
     </header>
 </body>
