--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="#">Accueil</a>
             <a href="#">Économie</a>
-            <a href="#">Éthique </a>
+            <a href="file:///home/yallali/Documents/s1/SAE/yallali.html#">Éthique </a>
             <a href="#">Histoire</a>
             <a href="#">Économie</a>
         </nav>
