--- a/yallali.html
+++ b/yallali.html
@@ -1,11 +1,98 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Éthique des hackers — Projet SAE</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
+  <!-- Navigation commune -->
+  <header class="header" role="banner">
+    <nav class="navigation" >
+      <a href="index.html">Accueil</a>
+      <a href="pratiques.html">Bonnes pratiques</a>
+      <a href="ressources.html">Ressources</a>
+    </nav>
+  </header>
+
+  <main id="main" role="main" class="ethics-page">
+
+ 
+    <section class="hackeur-section" >
+      <h1 id="h-1">Éthique des hackers</h1>
+      <p class="hackeur-subtitle">
+        Souligner l’importance des hackers responsables et leur rôle dans la cybersécurité.
+      </p>
+      <br>
+      <p><strong>IMAGE</strong></p>
+    </section>
+
+    <!-- Introduction -->
+    <section class="intro-section" >
+      <h2 id="h-2">Introduction</h2>
+      <p>
+        YesWeHack met en avant l’éthique des hackers responsables, en valorisant leur rôle
+        dans la sécurité informatique et dans la protection des utilisateurs.
+      </p>
+      <p>
+        Le site rappelle que le hacking éthique est basé sur la responsabilité,
+        le respect des données et une démarche constructive envers les entreprises.
+      </p>
+    </section>
+
+    <!-- Tondeuse : image gauche / texte droite -->
+    <section class="principes fonda" >
+      <p><strong>IMAGE</strong> </p>
+      <div class="div-1">
+        <h3 id="h-3">Principes fondamentaux</h3>
+        <p>
+          L’éthique du hacker repose sur des valeurs fortes : agir de manière responsable,
+          divulguer les failles de façon constructive et contribuer à améliorer la sécurité.
+        </p>
+        <ul>
+          <li>Respect des utilisateurs et de leur vie privée</li>
+          <li>Transparence dans la démarche</li>
+          <li>Divulgation responsable des vulnérabilités</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Tondeuse inversée : image droite / texte gauche -->
+    <section class="benfique" >
+      <div class="div-2">
+        <h3 id="h-4">Une éthique bénéfique</h3>
+        <p>
+          Grâce au programme de récompense pour les bugs (Bug Bounty),
+          YesWeHack démontre qu’un hacker responsable peut avoir un rôle économique
+          et bénéfique, en aidant les entreprises tout en étant justement récompensé.
+        </p>
+      </div>
+      <p><strong>IMAGE</strong></p>
+    </section>
+
+    <!-- Cas pratique -->
+    <section class="cas-pratique" >
+      <h3 id="h-5">Cas pratique</h3>
+      <p>
+        Depuis 2013, YesWeHack illustre ce modèle : en collaborant avec des milliers de chercheurs,
+        l’entreprise a su s’imposer comme un leader européen de la cybersécurité,
+        tout en plaçant l’éthique au centre de sa démarche.
+      </p>
+      <div class="div-3">
+        <p>"L’éthique est la clé pour transformer le hacking en solution de cybersécurité."</p>
+        <footer>— Exemple de philosophie YesWeHack</footer>
+      </div>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer" role="contentinfo">
+    <small>Auteur : ALLALI Yanis — Page « Éthique »</small>
+  </footer>
+
 </body>
 </html>
