--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YESWEHACK</title>
+    <title>Index</title>
 </head>
 <body>
+    <img src="font_temp.jpg">
+    <img src="font_temp.jpg">
     <header>
-        <div class="bouton"></div>
+        <div class="logo"><img src="https://cdn.discordapp.com/attachments/1416470471012253787/1420382998175551559/IMG_5143.png?ex=68d5db00&is=68d48980&hm=62005c4c8dd60d4122b5f3546c4b655d915a9386cfc88a838d0aa939135cda5d"></div>
         <nav>
-            <a href="#">Accueil</a>
-            <a href="#">Économie</a>
-            <a href="file:///home/yallali/Documents/s1/SAE/yallali.html#">Éthique </a>
-            <a href="#">Histoire</a>
-            <a href="#">Économie</a>
+            <a href="#bas">Accueil</a>
+            <a href="#">À propos</a>
+            <a href="#">Contact</a>
+            <a href="#">Connexion</a>
+            <a href="#">Inscription</a>
         </nav>
     </header>
+
 </body>
 </html>
