--- a/yallali.html
+++ b/yallali.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Éthique des hackers — Projet SAE</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css">
@@ -10,7 +10,7 @@
 <body>
 
   <!-- Navigation commune -->
-  <header class="header" role="banner">
+  <header class="header" >
     <nav class="navigation" >
       <a href="index.html">Accueil</a>
       <a href="pratiques.html">Bonnes pratiques</a>
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
-  <main id="main" role="main" class="ethics-page">
+  <main id="main"  class="ethics-page">
 
  
     <section class="hackeur-section" >
@@ -81,16 +81,16 @@
         l’entreprise a su s’imposer comme un leader européen de la cybersécurité,
         tout en plaçant l’éthique au centre de sa démarche.
       </p>
-      <div class="div-3">
+      <blockquote class="case-quote">
         <p>"L’éthique est la clé pour transformer le hacking en solution de cybersécurité."</p>
         <footer>— Exemple de philosophie YesWeHack</footer>
-      </div>
+      </blockquote>
     </section>
 
   </main>
 
   <!-- Footer -->
-  <footer class="footer" role="contentinfo">
+  <footer class="footer" >
     <small>Auteur : ALLALI Yanis — Page « Éthique »</small>
   </footer>
 
