--- a/Fonctionnement.html
+++ b/Fonctionnement.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Présentation YesWeHack</title>
+    <title>Fonctionnement YesWeHack</title>
 </head>
 <body>
-    
+    <header>
+        <div class="bouton"></div>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="#">Économie</a>
+            <a href="#">Économie statistique</a>
+            <a href="#">Éthique </a>
+            <a href="#">Histoire</a>
+            <a href="Fonctionnement.html">Fonctionnement et revenu</a>
+        </nav>
+    </header>
+    <h1>Fonctionnement et revenu</h1>
+    <div style="display:flex; align-items:flex-start;">
+        <img src="26M.webp" alt="Image 26M YesWeHack" style="width:750px; margin-left:75px;">
+
+        <div class="paragraphe_1">
+            <h2>Levée de fonds</h2>
+            <p>
+                YesWeHack, la plateforme globale de Bug Bounty et de gestion des vulnérabilités,<br>
+                annonce une levée de fonds de 26 millions d'euros dans le cadre d’un tour de table de série C. <br>
+                Dans un contexte où les risques cyber sont plus stratégiques et complexes que jamais, <br>
+                YesWeHack utilisera ce financement pour investir dans l’intelligence artificielle, <br>
+                lancer de nouvelles solutions innovantes et développer sa croissance à l’international. <br>
+            </p>
+        </div>
+    </div>
+    <div class="paragraphe_2">
+        <h2>Une entreprise de CVE</h2>
+        <p>
+            qu'est ce que CVE ? 
+        </p>
+        <img src="CVE.webp" alt="Image CVE YesWeHack" style="width:750px; margin-right:75px;">
+        </div>
+    </div>
+    <footer>
+        <p>Baptiste AUBRY (Baubry2-iut90)</p>
+    </footer>
+
 </body>
 </html>
