--- a/ethique.html
+++ b/ethique.html
@@ -12,9 +12,11 @@
   <!-- Navigation commune -->
   <header class="header" >
     <nav class="navigation" >
-      <a href="index.html">Accueil</a>
-      <a href="pratiques.html">Bonnes pratiques</a>
-      <a href="ressources.html">Ressources</a>
+      <a href="index.html">ACCUEIL</a>
+      <a href="histoire.html">HISTOIRE</a>
+      <a href="economie.html">ECONOMIE</a>
+      <a href="fonctionnement.html">FONCTIONNEMENT</a>
+      <a href="ethique.html">ETHIQUE</a>
     </nav>
   </header>
 
