--- a/economie.html
+++ b/economie.html
@@ -12,9 +12,11 @@
   <!-- Navigation commune -->
   <header class="header" role="banner">
     <nav class="navigation" >
-      <a href="index.html">Accueil</a>
-      <a href="pratiques.html">Bonnes pratiques</a>
-      <a href="ressources.html">Ressources</a>
+      <a href="index.html">ACCUEIL</a>
+      <a href="histoire.html">HISTOIRE</a>
+      <a href="economie.html">ECONOMIE</a>
+      <a href="fonctionnement.html">FONCTIONNEMENT</a>
+      <a href="ethique.html">ETHIQUE</a>
     </nav>
   </header>
 
@@ -68,3 +70,4 @@
     <a>Jarod Bouju A1</a>
 </body>
 </html>
+
