--- a/index.html
+++ b/index.html
@@ -7,18 +7,28 @@
     <title>Index</title>
 </head>
 <body>
-    <img src="font_temp.jpg">
-    <img src="font_temp.jpg">
+    <img src="ampleFolder/ampleFolder/image/fond-test.jpg">
     <header>
         <div class="logo"><img src="https://cdn.discordapp.com/attachments/1416470471012253787/1420382998175551559/IMG_5143.png?ex=68d5db00&is=68d48980&hm=62005c4c8dd60d4122b5f3546c4b655d915a9386cfc88a838d0aa939135cda5d"></div>
         <nav>
-            <a href="#bas">Accueil</a>
-            <a href="#">À propos</a>
-            <a href="#">Contact</a>
-            <a href="#">Connexion</a>
-            <a href="#">Inscription</a>
+            <a href="index.html">ACCUEIL</a>
+            <a href="histoire.html">HISTOIRE</a>
+            <a href="economie.html">ECONOMIE</a>
+            <a href="fonctionnement.html">FONCTIONNEMENT</a>
+            <a href="ethique.html">ETHIQUE</a>
         </nav>
     </header>
+    <nav class="titre">
+        <img src="ampleFolder/ampleFolder/image/fond-test.jpg">
+    </nav>
+        <nav class="content">
+        <p>
+            azuyvcuebvchuavevcyubrz ubcryubca <br>  crubcuazlbcuyzvuycvul <br>  rycvujzvchfjvsycivdch   vlzyevcjdzvhc   hdc
+        </p>
+    </nav>
+    <footer>
+        <p>Noe LAHURTE, BUT informatique, A1</p>
+    </footer>
 
 </body>
 </html>
