--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Index</title>
 </head>
 <body>
-    <img src="fond-test.jpg">
+    <img src="images/fond-test.jpg">
     <header>
         <div class="logo"><img src="https://cdn.discordapp.com/attachments/1416470471012253787/1420382998175551559/IMG_5143.png?ex=68d5db00&is=68d48980&hm=62005c4c8dd60d4122b5f3546c4b655d915a9386cfc88a838d0aa939135cda5d"></div>
         <nav>
