--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -9,12 +9,11 @@
     <header>
         <div class="bouton"></div>
         <nav>
-            <a href="index.html">Accueil</a>
-            <a href="#">Économie</a>
-            <a href="#">Économie statistique</a>
-            <a href="#">Éthique </a>
-            <a href="#">Histoire</a>
-            <a href="Fonctionnement.html">Fonctionnement et revenu</a>
+      <a href="index.html">ACCUEIL</a>
+      <a href="histoire.html">HISTOIRE</a>
+      <a href="economie.html">ECONOMIE</a>
+      <a href="fonctionnement.html">FONCTIONNEMENT</a>
+      <a href="ethique.html">ETHIQUE</a>
         </nav>
     </header>
     <h1>Fonctionnement et revenu</h1>
