--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
     <nav class="titre">
         <img src="ampleFolder/ampleFolder/image/fond-test.jpg">
     </nav>
-        <nav class="content">
+    <nav class="content">
+        
+
+       
+        <h1>YesWeHack</h1>
         <p>
-            azuyvcuebvchuavevcyubrz ubcryubca <br>  crubcuazlbcuyzvuycvul <br>  rycvujzvchfjvsycivdch   vlzyevcjdzvhc   hdc
+            Une entreprise européenne qui aide les organisations à renforcer leur sécurité numérique.
         </p>
+        <p><em>"La sécurité par la communauté"</em></p>
     </nav>
     <footer>
         <p>Noe LAHURTE, BUT informatique, A1</p>
