--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="index.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+ <meta charset="UTF-8">
+<link rel="stylesheet" href="index.css">
+ <link rel="icon" type="image/x-icon" href="favicon.ico">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Index</title>
 </head>
 <body>
     <img src="fond-test.jpg">
