ajout d'icone dans histoire.html

--- a/histoire.html
+++ b/histoire.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Histoire - SAES1 groupe 2</title>
 </head>
 
@@ -71,3 +72,4 @@
 
 </body>
 </html>
+
