--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <nav class="titre">
-        <img src="ampleFolder/ampleFolder/image/fond-test.jpg">
+        <img src="fond-test.jpg">
     </nav>
     <nav class="content">
         
