--- a/histoire.html
+++ b/histoire.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Histoire - SAES1 groupe 2</title>
+    <title>Histoire - YesWeHack</title>
 </head>
 
 <body>
@@ -72,4 +72,5 @@
 
 </body>
 </html>
+
 
