--- a/economie.html
+++ b/economie.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Éthique des hackers — Projet SAE</title>
+  <title>Économie</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -70,4 +70,5 @@
     <a>Jarod Bouju A1</a>
 </body>
 </html>
+
 
