--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
-<link rel="stylesheet" href="index.css">
- <link rel="icon" type="image/x-icon" href="favicon.ico">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Index</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ACCUEIL</title>
 </head>
 <body>
-    <img src="fond-test.jpg">
     <header>
-        <div class="logo"><img src="favicon.ico"></div>
+        <div class="logo"><a href="index.html"></a><img src="logo.png"></a></div>
         <nav>
-            <a href="index.html">ACCUEIL</a>
-            <a href="histoire.html">HISTOIRE</a>
-            <a href="economie.html">ECONOMIE</a>
-            <a href="fonctionnement.html">FONCTIONNEMENT</a>
-            <a href="ethique.html">ETHIQUE</a>
+            <button href="histoire.html">HISTOIRE</button>
+            <button href="economie.html">ECONOMIE</button>
+            <button href="fonctionnement.html">FONCTIONNEMENT</button>
+            <button href="ethique.html">ETHIQUE</button>
         </nav>
     </header>
-    <nav class="titre">
-        <img src="fond-test.jpg">
-    </nav>
-    <nav class="content">
-        
-
-       
-        <h1>YesWeHack</h1>
-        <p>
-            Une entreprise européenne qui aide les organisations à renforcer leur sécurité numérique.
-        </p>
-        <p><em>"La sécurité par la communauté"</em></p>
-    </nav>
+    <div class="acceuil">
+        <div id="slogan">
+            <h1>Yes We Hack</h1>
+            <p>Paie une protection, pas la rançon</p>
+        </div>
+        <img id="img_acceuille"src="fond-test.jpg"></a>
+    </div>
+    <div class="contenu">
+        <div class="presentation">
+            <h1>Qu'est ce que c'est ?</h1>
+            <p>uviuenvoenaviaeufivuaenifunvienuafvn<br>eifuvniuefivuzeifivufbuivizfebuviefb</p>
+        </div>
+    </div>
     <footer>
         <p>Noe LAHURTE, BUT informatique, A1</p>
     </footer>
