--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"></a><img src="logo.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="logo.png"></a></div>
         <nav>
-            <button href="histoire.html">HISTOIRE</button>
-            <button href="economie.html">ECONOMIE</button>
-            <button href="fonctionnement.html">FONCTIONNEMENT</button>
-            <button href="ethique.html">ETHIQUE</button>
+            <a href="histoire.html"><button>HISTOIRE</button></a>
+            <a href="economie.html"><button>ECONOMIE</button></a>
+            <a href="fonctionnement.html"><button>FONCTIONNEMENT</button></a>
+            <a href="ethique.html"><button >ETHIQUE</button></a>
         </nav>
     </header>
     <div class="acceuil">
