--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -33,12 +33,16 @@
             </p>
         </div>
     </div>
+    <div style="display:flex; align-items:flex-start;">
     <div class="paragraphe_2">
-        <h2>Une entreprise de CVE</h2>
+        <h2>Comment faire partie de YesWeHack</h2>
         <p>
-            qu'est ce que CVE ? 
+            1ère solution: YesWeHackEDU une plateforme éducative dédiée au bug bounty et à l’apprentissage <br>
+            du hacking éthique, pensée pour les écoles et universités (lancée en 2019). Elle offre <br>
+            un environnement de formation pratique et des licences pour établissements. 
         </p>
-        <img src="CVE.webp" alt="Image CVE YesWeHack" style="width:750px; margin-right:75px;">
+        <img src="" alt="(Image formation YesWeHack)" style="width:750px; margin-right:75px;">
+    </div>
     </div>
     <footer>
         <p>Baptiste AUBRY (Baubry2-iut90)</p>
