--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="logo.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="favicon.ico"></a></div>
         <nav>
             <a href="histoire.html"><button>HISTOIRE</button></a>
             <a href="economie.html"><button>ECONOMIE</button></a>
