--- a/economie.html
+++ b/economie.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8" >
+  <meta name="viewport" content="width=device-width,initial-scale=1" >
   <title>Économie</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css">
@@ -10,7 +10,7 @@
 <body>
 
   <!-- Navigation commune -->
-  <header class="header" role="banner">
+  <header class="header" >
     <nav class="navigation" >
       <a href="index.html">ACCUEIL</a>
       <a href="histoire.html">HISTOIRE</a>
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <main id="main" role="main" class="ethics-page">
+  <main id="main"  class="ethics-page">
 
  
     <section class="hackeur-section" >
@@ -70,5 +70,6 @@
     <a>Jarod Bouju A1</a>
 </body>
 </html>
+
 
 
