--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="contenu">
         <div class="presentation">
             <h1>Qu'est ce que c'est ?</h1>
-            <p>explication<br>explication</p>
+            <p>Une entreprise européenne qui aide à protéger les services numériques.<br>explication</p>
         </div>
     </div>
     <footer>
