--- a/economie.html
+++ b/economie.html
@@ -1,75 +1,71 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" >
-  <meta name="viewport" content="width=device-width,initial-scale=1" >
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Économie</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+  <body>
+      <!-- Navigation commune -->
+      <header class="header" role="banner">
+        <nav class="navigation" >
+          <a href="index.html">ACCUEIL</a>
+          <a href="histoire.html">HISTOIRE</a>
+          <a href="economie.html">ECONOMIE</a>
+          <a href="fonctionnement.html">FONCTIONNEMENT</a>
+          <a href="ethique.html">ETHIQUE</a>
+        </nav>
+      </header>
 
-  <!-- Navigation commune -->
-  <header class="header" >
-    <nav class="navigation" >
-      <a href="index.html">ACCUEIL</a>
-      <a href="histoire.html">HISTOIRE</a>
-      <a href="economie.html">ECONOMIE</a>
-      <a href="fonctionnement.html">FONCTIONNEMENT</a>
-      <a href="ethique.html">ETHIQUE</a>
-    </nav>
-  </header>
+  
+      <section class="hackeur-section" >
+        <h1 id="h-1">Comment fonctionne le model  économique?</h1>
+        <p class="hackeur-subtitle">
+              Le système économique de YesWeHack est une plateforme
+              d’intermédiation, elle a donc pour principe de mettre
+                en relation des hackers éthiques (hunters) pour
+                accomplir des tâches type cyberattaque. YesWeHack
+                  prend des contrats auprès d’entreprises qui veulent
+              découvrir leurs failles ou tester leur sécurité.
+        </p>
+        <img src="codeur01.jpg" alt="Visuel_Codeur">
+      </section>
 
-  <main id="main"  class="ethics-page">
-
- 
-    <section class="hackeur-section" >
-      <h1 id="h-1">Comment fonctionne le model  économique?</h1>
-      <p class="hackeur-subtitle">
-            Le système économique de YesWeHack est une plateforme
-             d’intermédiation, elle a donc pour principe de mettre
-              en relation des hackers éthiques (hunters) pour
-               accomplir des tâches type cyberattaque. YesWeHack
-                prend des contrats auprès d’entreprises qui veulent
-             découvrir leurs failles ou tester leur sécurité.
-      </p>
-      <img src="codeur01.jpg">
-    </section>
-
-    <!-- Introduction -->
-    <section class="intro-section" >
-      <h2>les acteur principaux des flux financiers..</h2>
-      <p>
-        les acteur principaux de nos flux financier son les l’entreprise cliente : 
-      </p>
-      <ul>
-        <li>Les entreprises prennent un abonnement à YesWeHack qui leur permet d’obtenir 
-          l’accès à la plateforme d’intermédiation et à des services.
-        </li>
-        <li>
-          Les “hunters” sont également très importants au flux financiers, 
-          car ce sont eux qui effectuent les cyberattaques pour obtenir une prime.
-        </li>
-      </ul>
-    </section>
-
-    <!-- Tondeuse : image gauche / texte droite -->
-    <section class="principes fonda" >
-      <div class="div-1">
-        <h3>les acteur principaux des flux financiers..</h3>
+      <!-- Introduction -->
+      <section class="intro-section" >
+        <h2>les acteur principaux des flux financiers..</h2>
+        <p>
+          les acteur principaux de nos flux financier son les l’entreprise cliente : 
+        </p>
         <ul>
-          <li>
-            Les hunters découvrent des failles et les signalent via une plateforme comme YesWeHack.
+          <li>Les entreprises prennent un abonnement à YesWeHack qui leur permet d’obtenir 
+            l’accès à la plateforme d’intermédiation et à des services.
           </li>
-          <li>Ce modèle est dit “pay-for-results” : l’entreprise ne paie que
-             pour les vulnérabilités réellement trouvées et validées.
-            </li>
+          <li>
+            Les “hunters” sont également très importants au flux financiers, 
+            car ce sont eux qui effectuent les cyberattaques pour obtenir une prime.
+          </li>
         </ul>
-      </div>
-    </section>
-    <a>Jarod Bouju A1</a>
-</body>
+      </section>
+
+      <!-- Tondeuse : image gauche / texte droite -->
+      <section class="principes fonda" >
+        <div class="div-1">
+          <h3>les acteur principaux des flux financiers..</h3>
+          <ul>
+            <li>
+              Les hunters découvrent des failles et les signalent via une plateforme comme YesWeHack.
+            </li>
+            <li>Ce modèle est dit “pay-for-results” : l’entreprise ne paie que
+              pour les vulnérabilités réellement trouvées et validées.
+              </li>
+          </ul>
+        </div>
+      </section>
+      <a>Jarod Bouju A1</a>
+
+  </body>
+
 </html>
-
-
-
