--- a/ethique.html
+++ b/ethique.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Éthique des hackers — Projet SAE</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style-ethique.css">
 </head>
 <body>
 
