--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="favicon.ico"></a></div>
+        <div class="logo"><a href="index.html"><img src="logo-removebg-preview.png"></a></div>
         <nav>
-            <a href="histoire.html"><button>HISTOIRE</button></a>
-            <a href="economie.html"><button>ECONOMIE</button></a>
-            <a href="fonctionnement.html"><button>FONCTIONNEMENT</button></a>
-            <a href="ethique.html"><button >ETHIQUE</button></a>
+            <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
+            <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
+            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT">FONCTIONNEMENT</span></button></a>
+            <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
         </nav>
     </header>
     <div class="acceuil">
@@ -22,13 +22,9 @@
             <h1>Yes We Hack</h1>
             <p>Paie une protection, pas la rançon</p>
         </div>
-        <img id="img_acceuille"src="fond-test.jpg"></a>
-    </div>
-    <div class="contenu">
-        <div class="presentation">
-            <h1>Qu'est ce que c'est ?</h1>
-            <p>Une entreprise européenne qui aide à protéger les services numériques.<br>explication</p>
-        </div>
+        <video autoplay loop muted width="600">
+            <source src="fond-test.jpg" type="video/mp4">
+        </video>
     </div>
     <footer>
         <p>Noe LAHURTE, BUT informatique, A1</p>
