--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             <h1>Yes We Hack</h1>
             <p>Paie une protection, pas la rançon</p>
         </div>
-        <video autoplay loop muted width="600">
-            <source src="fond-test.jpg" type="video/mp4">
-        </video>
+        <img src="fond-test.jpg">
     </div>
     <footer>
         <p>Noe LAHURTE, BUT informatique, A1</p>
