--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <header>
-        <div class="bouton"></div>
+        <div class="logo"><a href="index.html"><img src="logo-removebg-preview.png"></a></div>
         <nav>
-      <a href="index.html">ACCUEIL</a>
-      <a href="histoire.html">HISTOIRE</a>
-      <a href="economie.html">ECONOMIE</a>
-      <a href="fonctionnement.html">FONCTIONNEMENT</a>
-      <a href="ethique.html">ETHIQUE</a>
+            <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
+            <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
+            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT">FONCTIONNEMENT</span></button></a>
+            <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
         </nav>
     </header>
     <h1>Fonctionnement et revenu</h1>
