--- a/histoire.html
+++ b/histoire.html
@@ -1,76 +1,71 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Histoire - YesWeHack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ACCUEIL</title>
 </head>
-
 <body>
-
     <header>
+        <div class="logo"><a href="index.html"><img src="logo-removebg-preview.png"></a></div>
         <nav>
-            <a href="index.html">ACCUEIL</a>
-            <a href="histoire.html">HISTOIRE</a>
-            <a href="economie.html">ECONOMIE</a>
-            <a href="fonctionnement.html">FONCTIONNEMENT</a>
-            <a href="ethique.html">ETHIQUE</a>
+            <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
+            <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
+            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT">FONCTIONNEMENT</span></button></a>
+            <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
         </nav>
     </header>
-
-    <section>
-        <h1>HISTOIRE</h1>
-        <h2>De start-up française à géant du bug bounty</h2>
-        <h4>[image de fond]</h4>
-    </section>
-
-    <section>
-        <h3>Débuts de l'entreprise</h3>
-        <ul>
-            <li>Fondée en 2015 par Guillaume Vassault-Houlière et Manuel Dorne</li>
-            <li>Plateforme née du milieu des hackers éthiques</li>
-            <li>Connecte des organisations à des dizaines de miliers de chercheurs en cyber-sécurité</li>
-            <li>Définir les notions de bug bounty, hackeur éthique, white hat</li>
-        </ul>
-        <h4>[image à gauche]</h4>
-    </section>
-
-    <section>
-        <h3>Expansion de la start-up</h3>
-        <ul>
-            <li>Un total de 40 000 inscrits</li>
-            <li>Différentes levées de fonds (2019, 2021, 2024)</li>
-            <li>Clients différents: DoctoLib, Décathlon, La Poste Suisse ... </li>
-            <li>2020: tester la sécurité de l'application TousAntiCovid</li>
-            <li>Certifiés SecNumCloud, ISO 27001, CSA STAR, SOC I /II Type 2 et PCI DSS</li>
-        </ul>
-        <h4>[image à droite]</h4>
-    </section>
-
-    <section>
-        <h3>YesWeHack aujourd'hui et demain</h3>
-        <ul>
-            <li>Leader européen du bug bounty</li>
-            <li>Developpement constant de sa communauté dans le monde</li>
-            <li>Acquisition de Sekost en 2024</li>
-            <li>A obtenu le statut d'autorité de numérotation CVE (Common Vulnerabilities and Exposures)</li>
-        </ul>
-        <h4>[image à gauche]</h4>
-    </section>
-
+    <div class="acceuil">
+        <div id="slogan">
+            <h1>Yes We Hack</h1>
+            <p>Paie une protection, pas la rançon</p>
+        </div>
+        <video autoplay loop muted width="600">
+            <source src="fond.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="contenu_1">
+        <div class="titre_contenu_1">
+            <a><h1><strong>Qu'est ce que c'est?</strong></h1></a>
+        </div>
+        <div class="blocks">
+            <div class="block_1">
+                <img src="image_temp.jpg">
+                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+            </div>
+            <div class="block_2">
+                <img src="image_temp.jpg">
+                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+            </div>
+            <div class="block_3">
+                <img src="image_temp.jpg">
+                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+            </div>
+        </div>
+    </div>
+    <div class="contenu_2">
+        <a href="histoire.html"><button id="lien_histoire"><span>En savoir +</span></button></a>
+        <video autoplay muted loop playsinline width="600">
+            <source src="fond_histoire_1.mp4" type="video/mp4">
+        </video>
+        <div class="presentation_1">
+            <h1>histoir bla?</h1>
+            <p>BLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+        </div>
+        <div class="presentation_2">
+            <img src="image_temp.jpg">
+            <h1>BLA bal blabla histoir</h1>
+            <p>uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+        </div>
+        <div class="presentation_3">
+            <p>BLA bal blabla histoir uzguzdvc ugzvugvzvec uevzcuv euveuvet  cedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+        </div>
+    </div>
     <footer>
-        <p>sources
-            <br>
-            <a href="https://www.yeswehack.com/fr/about">YesWeHack.com,</a>
-            <a href="https://fr.wikipedia.org/wiki/YesWeHack">wikipedia.org,</a>
-            <a href="https://www.lemondeinformatique.fr/actualites/lire-pour-cibler-les-pme-yes-we-hack-rachete-sekost-97813.html">lemondeinformatique.fr,</a>
-            <a href="https://www.clubic.com/actualite-580342-le-francais-yeswehack-denicheur-de-vulnerabilites-informatiques-entre-dans-la-cour-des-grands.html">clubic.com</a>
-        </p>
-        <p>Bryan BITTIGER, BUT informatique, A1</p>
+        <p>Noe LAHURTE, BUT informatique, A1</p>
     </footer>
 
 </body>
 </html>
-
-
