--- a/index.html
+++ b/index.html
@@ -22,7 +22,46 @@
             <h1>Yes We Hack</h1>
             <p>Paie une protection, pas la rançon</p>
         </div>
-        <img src="fond-test.jpg">
+        <video autoplay loop muted width="600">
+            <source src="fond.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div class="contenu_1">
+        <div class="titre_contenu_1">
+            <a><h1><strong>Qu'est ce que c'est?</strong></h1></a>
+        </div>
+        <div class="blocks">
+            <div class="block_1">
+                <img src="image_temp.jpg">
+                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+            </div>
+            <div class="block_2">
+                <img src="image_temp.jpg">
+                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+            </div>
+            <div class="block_3">
+                <img src="image_temp.jpg">
+                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+            </div>
+        </div>
+    </div>
+    <div class="contenu_2">
+        <a href="histoire.html"><button id="lien_histoire"><span>En savoir +</span></button></a>
+        <video autoplay muted loop playsinline width="600">
+            <source src="fond_histoire_1.mp4" type="video/mp4">
+        </video>
+        <div class="presentation_1">
+            <h1>histoir bla?</h1>
+            <p>BLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+        </div>
+        <div class="presentation_2">
+            <img src="image_temp.jpg">
+            <h1>BLA bal blabla histoir</h1>
+            <p>uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+        </div>
+        <div class="presentation_3">
+            <p>BLA bal blabla histoir uzguzdvc ugzvugvzvec uevzcuv euveuvet  cedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+        </div>
     </div>
     <footer>
         <p>Noe LAHURTE, BUT informatique, A1</p>
