CHangement histoire.html ajout image fond + mise en forme section 1

--- a/histoire.html
+++ b/histoire.html
@@ -11,20 +11,22 @@
 
 <body>
       <!-- Navigation commune -->
-      <header class="header" role="banner">
-        <nav class="navigation" >
-          <a href="index.html">ACCUEIL</a>
-          <a href="histoire.html">HISTOIRE</a>
-          <a href="economie.html">ECONOMIE</a>
-          <a href="fonctionnement.html">FONCTIONNEMENT</a>
-          <a href="ethique.html">ETHIQUE</a>
+    <header>
+        <div class="logo"><a href="index.html"><img src="logo-removebg-preview.png"></a></div>
+        <nav>
+            <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
+            <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
+            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT">FONCTIONNEMENT</span></button></a>
+            <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
         </nav>
-      </header>
+    </header>
 
-    <section>
-        <h1>HISTOIRE</h1>
-        <h2>De start-up française à géant du bug bounty</h2>
-        <h4>[image de fond]</h4>
+    <section class="section1">
+        <div class="div1">
+            <h1>HISTOIRE</h1>
+            <h2>De start-up française à géant du bug bounty</h2>
+        </div>
+        <img class="img_fond" src="fond.png" alt="fond de la page">
     </section>
 
     <section>
@@ -74,5 +76,6 @@
 
 </body>
 </html>
+
 
 
