modif css histoire.html

--- a/histoire.html
+++ b/histoire.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="stylehistoire.css">
+    <link rel="stylesheet" href="Assets/css/stylehistoire.css">
     <title>Histoire - YesWeHack</title>
 
 </head>
@@ -76,6 +76,7 @@
 
 </body>
 </html>
+
 
 
 
