--- a/histoire.html
+++ b/histoire.html
@@ -26,7 +26,7 @@
             <h1>HISTOIRE</h1>
             <h2>De start-up française à géant du bug bounty</h2>
         </div>
-        <img class="img_fond" src="fond.png" alt="fond de la page">
+        <img class="img_fond" src="Assets/images/fond_histoire.png" alt="fond de la page">
     </section>
 
     <section>
@@ -76,6 +76,7 @@
 
 </body>
 </html>
+
 
 
 
