--- a/ethique.html
+++ b/ethique.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Éthique des hackers — Projet SAE</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/Assets/images/favicon.ico">
   <link rel="stylesheet" href="/Assets/css/style-ethique.css">
 </head>
 <body>
 
   <header>
-        <div class="logo"><a href="index.html"><img src="logo-removebg-preview.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="/Assets/images/logo-removebg-preview.png"></a></div>
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
@@ -25,7 +25,7 @@
     <section class="section-ethique">
       <h1>Éthique des hackers</h1>
       <div class="bloc-ethique">
-        <img src="hackeur ethique.jpg" alt="Hacker éthique travaillant sur un ordinateur">
+        <img src="/Assets/images/hackeur ethique.jpg" alt="Hacker éthique travaillant sur un ordinateur">
         <p>
           Les hackers éthiques, ou "white hats", testent la sécurité des systèmes informatiques 
           légalement et de manière responsable. Ils protègent utilisateurs et entreprises contre 
@@ -37,7 +37,7 @@
  
     <section class="section-introduction">
       <h2>Introduction</h2>
-      <img src="ordi.jpg" alt="Illustration introduction hackers éthiques">
+      <img src="/Assets/images/ordi.jpg" alt="Illustration introduction hackers éthiques">
       <div class="bloc-introduction">
         <p>
           YesWeHack valorise les hackers responsables et leur contribution à la cybersécurité. 
@@ -52,7 +52,7 @@
   
     <section class="section-principes">
       <h2>Principes fondamentaux</h2>
-        <img src="principe.hack.jpg" alt="Illustration des principes éthiques">
+        <img src="/Assets/images/principe_hack.jpg" alt="Illustration des principes éthiques">
         <div class="bloc-principes">
           <p>
             L’éthique des hackers est guidée par des valeurs fortes : agir de manière responsable 
@@ -69,7 +69,7 @@
     
     <section class="section-benefices">
       <h2>Une éthique bénéfique</h2>
-        <img src="bug-bounty.png" alt="Infographie Bug Bounty">
+        <img src="/Assets/images/bug-bounty.png" alt="Infographie Bug Bounty">
         <div class="bloc-benefices">
           <p>
             Le programme Bug Bounty de YesWeHack montre qu’un hacker responsable peut 
@@ -85,7 +85,7 @@
     <section class="section-cas">
       <h2>Cas pratique</h2>
       
-        <img src="equipe.jpg" alt="Équipe de cybersécurité">
+        <img src="/Assets/images/equipe.jpg" alt="Équipe de cybersécurité">
         <div class="bloc-cas">
           <p>
             Depuis 2015, YesWeHack a collaboré avec des milliers de chercheurs en Europe. 
