corriger le lien d'accès

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/Assets/css/index.css">
-    <link rel="icon" type="image/x-icon" href="/Assets/images/favicon.ico">
+    <link rel="stylesheet" href="Assets/css/index.css">
+    <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACCUEIL</title>
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="/Assets/images/logo-removebg-preview.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/logo-removebg-preview.png"></a></div>
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
@@ -23,7 +23,7 @@
             <p>Paie une protection, pas la rançon</p>
         </div>
         <video autoplay loop muted width="600">
-            <source src="/Assets/images/fond.mp4" type="video/mp4">
+            <source src="Assets/images/fond.mp4" type="video/mp4">
         </video>
     </div>
     <div class="contenu_1">
@@ -32,15 +32,15 @@
         </div>
         <div class="blocks">
             <div class="block_1">
-                <img src="/Assets/images/image_temp.jpg">
+                <img src="Assets/images/image_temp.jpg">
                 <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
             </div>
             <div class="block_2">
-                <img src="/Assets/images/image_temp.jpg">
+                <img src="Assets/images/image_temp.jpg">
                 <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
             </div>
             <div class="block_3">
-                <img src="/Assets/images/image_temp.jpg">
+                <img src="Assets/images/image_temp.jpg">
                 <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
             </div>
         </div>
@@ -48,14 +48,14 @@
     <div class="contenu_2">
         <a href="histoire.html"><button id="lien_histoire"><span>En savoir +</span></button></a>
         <video autoplay muted loop playsinline width="600">
-            <source src="/Assets/images/fond_histoire_1.mp4" type="video/mp4">
+            <source src="Assets/images/fond_histoire_1.mp4" type="video/mp4">
         </video>
         <div class="presentation_1">
             <h1>histoir bla?</h1>
             <p>BLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
         </div>
         <div class="presentation_2">
-            <img src="/Assets/images/image_temp.jpg">
+            <img src="Assets/images/image_temp.jpg">
             <h1>BLA bal blabla histoir</h1>
             <p>uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
         </div>
