--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/Assets/images/favicon.ico">
-    <link rel="stylesheet" href="/Assets/css/Styles_fonctionnement.css">
+    <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
+    <link rel="stylesheet" href="Assets/css/Styles_fonctionnement.css">
     <title>Fonctionnement YesWeHack</title>
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="/Assets/images/logo-removebg-preview.png"></a></div> 
+        <div class="logo"><a href="index.html"><img src="Assets/images/logo-removebg-preview.png"></a></div> 
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
@@ -19,7 +19,7 @@
     </header>
     <h1>Fonctionnement et revenu</h1>
     <div style="display:flex; align-items:flex-start;">
-        <img src="/Assets/images/26M.webp" alt="Image 26M YesWeHack" style="width:750px; margin-left:75px;">
+        <img src="Assets/images/26M.webp" alt="Image 26M YesWeHack" style="width:750px; margin-left:75px;">
 
         <div class="paragraphe_1">
             <h2>Levée de fonds</h2>
