corriger le lien d'accès

--- a/economie.html
+++ b/economie.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Économie</title>
-  <link rel="icon" type="image/x-icon" href="/Assets/images/favicon.ico">
-  <link rel="stylesheet" href="/Assets/css/styles.css">
+  <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
+  <link rel="stylesheet" href="Assets/css/styles.css">
 </head>
   <body>
       <!-- Navigation commune -->
@@ -30,7 +30,7 @@
                   prend des contrats auprès d’entreprises qui veulent
               découvrir leurs failles ou tester leur sécurité.
         </p>
-        <img src="/Assets/images/codeur01.jpg" alt="Visuel_Codeur">
+        <img src="Assets/images/codeur01.jpg" alt="Visuel_Codeur">
       </section>
 
       <!-- Introduction -->
@@ -69,4 +69,5 @@
   </body>
 
 </html>
+
 
