--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="blocks">
             <div class="block_1">
-                <img src="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack/blob/main/Assets/images/image_temp.jpg">
+                <img src="Assets/images/image_temp.jpg">
                 <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
             </div>
             <div class="block_2">
