--- a/ethique.html
+++ b/ethique.html
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/logo-removebg-preview.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/logo_v1.png"></a></div>
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
