--- a/economie.html
+++ b/economie.html
@@ -10,6 +10,7 @@
   <body>
       <!-- Navigation commune -->
       <header class="header" role="banner">
+        <div class="logo"><a href="index.html"><img src="Assets/images/logo_v1.png"></a></div>
         <nav class="navigation" >
           <a href="index.html">ACCUEIL</a>
           <a href="histoire.html">HISTOIRE</a>
@@ -69,5 +70,6 @@
   </body>
 
 </html>
+
 
 
