--- a/ethique.html
+++ b/ethique.html
@@ -28,7 +28,7 @@
   <section class="section-image">
       
     
-      <img src="SL_112119_25250_48.jpg" alt="Illustration introduction hackers éthiques">
+      <img src=Assets/images/img_ethique/monde.jpg alt="Illustration introduction hackers éthiques">
         <h1 >
           <strong>YesWeHack — l’éthique au service d’une sécurité durable.</strong>
         </h1>
