--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -19,7 +19,7 @@
     </header>
     <h1>Fonctionnement et revenu</h1>
     <div style="display:flex; align-items:flex-start;">
-        <img src="Assets/images/26M.webp" alt="Image 26M YesWeHack" style="width:750px; margin-left:75px;">
+        <img src="Assets/images/img_fonctionnement/graph_fonctionnement.jpeg" alt="Image 26M YesWeHack" style="width:750px; margin-left:75px;">
 
         <div class="paragraphe_1">
             <h2>Levée de fonds</h2>
