test githubpages bug

--- a/histoire.html
+++ b/histoire.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="Assets/images/img_index/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
     <link rel="stylesheet" href="Assets/css/stylehistoire.css">
     <!-- Font -->
     <!-- anton -->
@@ -21,7 +21,7 @@
 <body>
 <!-- Navigation commune -->
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/img_index/logo-v1.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/logo-removebg-preview.png"></a></div>
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
@@ -117,4 +117,3 @@
 
 </body>
 </html>
-
