--- a/histoire.html
+++ b/histoire.html
@@ -21,7 +21,7 @@
 <body>
 <!-- Navigation commune -->
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/logo-v1.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/logo_v1.png"></a></div>
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
