--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -17,32 +17,20 @@
             <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
         </nav>
     </header>
-    <h1>Fonctionnement et revenu</h1>
-    <div style="display:flex; align-items:flex-start;">
-        <img src="Assets/images/img_fonctionnement/graph_fonctionnement.jpeg" alt="Image 26M YesWeHack" style="width:750px; margin-left:75px;">
-
-        <div class="paragraphe_1">
-            <h2>Levée de fonds</h2>
+    <section class="intro">
+        <div style="display:flex; justify-content: center;">
+            <img src="Assets/images/img_fonctionnement/graph_fonctionnement.jpeg" alt="Graphique fonctionnement YesWeHack" style="width:750px; border-radius: 10px; margin-top: 30px; margin-bottom: 30px;">
+        </div>
+    </section>
+    <section class="paragraphe">
+        <div>
+            <h2> Comment devenir Hunter ?</h2>
             <p>
-                YesWeHack, la plateforme globale de Bug Bounty et de gestion des vulnérabilités,<br>
-                annonce une levée de fonds de 26 millions d'euros dans le cadre d’un tour de table de série C. <br>
-                Dans un contexte où les risques cyber sont plus stratégiques et complexes que jamais, <br>
-                YesWeHack utilisera ce financement pour investir dans l’intelligence artificielle, <br>
-                lancer de nouvelles solutions innovantes et développer sa croissance à l’international. <br>
+                bjeveihahfviyhfhefhzifzygfgezfhbzfyfufez
             </p>
         </div>
-    </div>
-    <div style="display:flex; align-items:flex-start;">
-    <div class="paragraphe_2">
-        <h2>Comment faire partie de YesWeHack</h2>
-        <p>
-            1ère solution: YesWeHackEDU une plateforme éducative dédiée au bug bounty et à l’apprentissage <br>
-            du hacking éthique, pensée pour les écoles et universités (lancée en 2019). Elle offre <br>
-            un environnement de formation pratique et des licences pour établissements. 
-        </p>
-        <img src="" alt="(Image formation YesWeHack)" style="width:750px; margin-right:75px;">
-    </div>
-    </div>
+        <a href="https://dojo-yeswehack.com/" ><img src="Assets/images/img_fonctionnement/dojo.jpeg" alt="Logo Dojo_YesWeHack"></a>
+    </section>
     <footer>
         <p>Baptiste AUBRY (Baubry2-iut90)</p>
     </footer>
