--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -22,14 +22,20 @@
             <img src="Assets/images/img_fonctionnement/graph_fonctionnement.jpeg" alt="Graphique fonctionnement YesWeHack" style="width:750px; border-radius: 10px; margin-top: 30px; margin-bottom: 30px;">
         </div>
     </section>
-    <section class="paragraphe">
+    <section class="paragraphe1">
         <div>
-            <h2> Comment devenir Hunter ?</h2>
+            <h2>Comment devenir Hunter ?</h2>
             <p>
                 bjeveihahfviyhfhefhzifzygfgezfhbzfyfufez
             </p>
         </div>
-        <a href="https://dojo-yeswehack.com/" ><img src="Assets/images/img_fonctionnement/dojo.jpeg" alt="Logo Dojo_YesWeHack"></a>
+        <a href="https://dojo-yeswehack.com/" ><img class="img_droite" src="Assets/images/img_fonctionnement/dojo.jpeg" alt="Logo Dojo_YesWeHack"></a>
+    </section>
+    <section class="paragraphe2">
+        <a href="https://yeswehack.com/ranking?period=All" ><img class="img_gauche" src="Assets/images/img_fonctionnement/rank.jpeg" alt="Image rang hunter"></a>
+        <div>
+            <h2>le classement des hunters</h2>
+        </div>
     </section>
     <footer>
         <p>Baptiste AUBRY (Baubry2-iut90)</p>
